app.ini is updated

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,14 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.view.helperPath = APPLICATION_PATH "/views/helpers"
 resources.frontController.params.displayExceptions = 1
 
+resources.db.host = "localhost"
+resources.db.username = "postgre"
+resources.db.password = " "
+resources.db.db = "lalala"
+
+role.id.admin = 1
+role.id.user = 0
+
 [staging : production]
 
 [testing : production]
