--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,6 +1,6 @@
 [production]
-phpSettings.display_startup_errors = 0
-phpSettings.display_errors = 0
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
@@ -10,7 +10,7 @@ resources.view.helperPath = APPLICATION_PATH "/views/helpers"
 resources.frontController.params.displayExceptions = 1
 
 resources.db.host = "localhost"
-resources.db.username = "postgre"
+resources.db.username = "postgres"
 resources.db.password = " "
 resources.db.db = "lalala"
 
